--- a/public/display.html
+++ b/public/display.html
@@ -3,133 +3,162 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display v3.18</title>
+  <title>Laserpointer Display v3.12</title>
   <style>
-    body { margin:0; background:#000 }
-    canvas { display:block; margin:auto; background:#000 }
+    body { margin:0; background:black; }
+    canvas { display:block; margin:auto; background:black; }
     #version {
       position:absolute; top:10px; left:10px;
-      color:#fff; font-family:sans-serif; font-size:14px; opacity:0.6;
+      color:white; font-family:sans-serif; font-size:14px; opacity:0.6;
     }
   </style>
 </head>
 <body>
-  <div id="version">v3.18 (multi-user + brushes)</div>
+  <div id="version">v3.12 (multi-user + smoothing)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    socket.emit("identify",{ role:"display", deviceId:null });
+    socket.emit("identify", { role: "display", deviceId: null });
 
-    const c   = document.getElementById("canvas"),
-          ctx = c.getContext("2d"),
-          CX  = c.width/2, CY = c.height/2;
+    const c    = document.getElementById("canvas"),
+          ctx  = c.getContext("2d"),
+          CX   = c.width/2,
+          CY   = c.height/2;
 
-    let MAX_H=20, MAX_V=20, SMOOTH=0.15;
-    socket.on("updateSettings",({maxH,maxV,smooth})=>{
-      if(typeof maxH==="number") MAX_H=maxH;
-      if(typeof maxV==="number") MAX_V=maxV;
-      if(typeof smooth==="number") SMOOTH=smooth;
+    // Defaults (werden per Admin überschrieben)
+    let MAX_H   = 20,
+        MAX_V   = 20,
+        SMOOTH  = 0.15;
+
+    // Datenstrukturen pro Gerät
+    const alpha0Map   = {},        // Kalibrier-Nullpunkt alpha
+          beta0Map    = {},        // Kalibrier-Nullpunkt beta
+          rawPos      = {},        // deviceId → { x, y }
+          smoothPos   = {},        // deviceId → { x, y } geglättet
+          lastColor   = {},        // deviceId → color
+          lastLight   = {},        // deviceId → lightness %
+          segments    = [];        // alle Liniensegmente
+
+    ctx.lineCap  = "round";
+    ctx.lineJoin = "round";
+
+    // Admin-Einstellungen live übernehmen
+    socket.on("updateSettings", ({ maxH, maxV, smooth }) => {
+      if (typeof maxH   === "number") MAX_H  = maxH;
+      if (typeof maxV   === "number") MAX_V  = maxV;
+      if (typeof smooth === "number") SMOOTH = smooth;
     });
 
-    const alpha0   ={}, beta0   ={};
+    // Neue Bewegungsdaten
+    socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
+      if (!deviceId || typeof alpha!=="number" || typeof beta!=="number") return;
 
-    const lastRaw  ={},   // deviceId→raw coords
-          lastSm   ={},   // deviceId→sm coords
-          lastCol  ={},   // deviceId→color
-          lastLit  ={};   // deviceId→lightness
+      // Lightness aus HSL extrahieren
+      const m = color.match(/hsl\([^,]+,\s*[^,]+,\s*(\d+)%\)/);
+      const light = m ? parseInt(m[1],10) : 50;
+      lastLight[deviceId] = light;
+      lastColor[deviceId] = color;
 
-    ctx.lineCap  ="round";
-    ctx.lineJoin ="round";
+      // Kalibrierung beim ersten Zeichnen
+      if (isDrawing && !(deviceId in alpha0Map)) {
+        alpha0Map[deviceId] = alpha;
+        beta0Map [deviceId] = beta;
+        rawPos   [deviceId] = { x: CX, y: CY };
+        smoothPos[deviceId] = { x: CX, y: CY };
+      }
+      if (!(deviceId in alpha0Map)) return;
 
-    socket.on("clear",()=>{
+      // Winkel-Delta + Wrap-Around
+      let dA = alpha - alpha0Map[deviceId];
+      if (dA > 180)  dA -= 360;
+      if (dA < -180) dA += 360;
+      let dB = beta - beta0Map[deviceId];
+
+      // Begrenzen
+      dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
+      dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
+
+      // Mapping auf Canvas (invertiert)
+      const x = CX - (dA / MAX_H) * CX;
+      const y = CY - (dB / MAX_V) * CY;
+
+      // Linien-Segment, falls gezeichnet wird
+      if (isDrawing) {
+        const prev = rawPos[deviceId];
+        segments.push({
+          x1: prev.x, y1: prev.y,
+          x2: x,      y2: y,
+          color, deviceId
+        });
+      }
+
+      // Rohdaten speichern
+      rawPos[deviceId] = { x, y };
+    });
+
+    // Canvas löschen
+    socket.on("clear", () => {
+      segments.length = 0;
       ctx.clearRect(0,0,c.width,c.height);
-      for(let k in alpha0)delete alpha0[k];
-      for(let k in beta0 )delete beta0[k];
-      for(let k in lastRaw)delete lastRaw[k];
-      for(let k in lastSm )delete lastSm[k];
-      for(let k in lastCol)delete lastCol[k];
-      for(let k in lastLit)delete lastLit[k];
+      for (let id in rawPos)    delete rawPos[id];
+      for (let id in smoothPos) delete smoothPos[id];
+      for (let id in alpha0Map) delete alpha0Map[id];
+      for (let id in beta0Map)  delete beta0Map[id];
+      for (let id in lastLight) delete lastLight[id];
     });
 
-    function parseLight(hsl){ const m=hsl.match(/hsl\(\s*\d+,\s*\d+%,\s*(\d+)%\s*\)/); return m?+m[1]:50; }
+    // Puls + Render-Loop
+    let pulse = 0, growing = true;
+    function render() {
+      ctx.clearRect(0,0,c.width,c.height);
 
-    function stamp(brush,x0,y0,x1,y1,color){
-      const dx=x1-x0,dy=y1-y0,d=Math.hypot(dx,dy);
-      if(d<1)return;
-      const n=Math.ceil(d/6);
-      for(let i=0;i<=n;i++){
-        const t=i/n, x=x0+dx*t, y=y0+dy*t;
-        ctx.fillStyle=color; ctx.strokeStyle=color;
-        if(brush===1){
-          ctx.beginPath(); ctx.arc(x,y,4,0,2*Math.PI); ctx.fill();
-        }else if(brush===2){
-          const a=Math.atan2(dy,dx);
-          ctx.lineWidth=4;
+      // 1) Linien zeichnen
+      for (const s of segments) {
+        ctx.strokeStyle = s.color;
+        ctx.lineWidth   = 6;
+        ctx.beginPath();
+        ctx.moveTo(s.x1, s.y1);
+        ctx.lineTo(s.x2, s.y2);
+        ctx.stroke();
+      }
+
+      // 2) Punkt-Glättung & Puls
+      pulse += growing ? 0.2 : -0.2;
+      if (pulse > 2)  growing = false;
+      if (pulse < 0)  growing = true;
+
+      for (const id in rawPos) {
+        const target = rawPos[id];
+        const smooth = smoothPos[id] = smoothPos[id] || { x:CX, y:CY };
+
+        // Glätten
+        smooth.x += (target.x - smooth.x) * SMOOTH;
+        smooth.y += (target.y - smooth.y) * SMOOTH;
+
+        const col   = lastColor[id] || "hsl(0,100%,50%)";
+        const light = lastLight[id] || 50;
+        const r     = 4 + pulse;
+
+        // Punkt zeichnen
+        ctx.beginPath();
+        ctx.arc(smooth.x, smooth.y, r, 0, 2*Math.PI);
+        ctx.fillStyle = col;
+        ctx.fill();
+
+        // Weißer Ring bei Low-Light
+        if (light < 20) {
           ctx.beginPath();
-          ctx.moveTo(x-Math.cos(a)*7.5,y-Math.sin(a)*7.5);
-          ctx.lineTo(x+Math.cos(a)*7.5,y+Math.sin(a)*7.5);
+          ctx.arc(smooth.x, smooth.y, r + 3, 0, 2*Math.PI);
+          ctx.strokeStyle = "#fff";
+          ctx.lineWidth   = 3;
           ctx.stroke();
-        }else if(brush===3){
-          [ -5,5 ].forEach(dx0=>[ -5,5 ].forEach(dy0=>{
-            ctx.beginPath(); ctx.arc(x+dx0,y+dy0,1.5,0,2*Math.PI); ctx.fill();
-          }));
         }
       }
+
+      requestAnimationFrame(render);
     }
-
-    socket.on("motion",({alpha,beta,color,isDrawing,brush,deviceId})=>{
-      if(!deviceId||typeof alpha!=="number")return;
-      lastCol[deviceId]=color;
-      lastLit[deviceId]=parseLight(color);
-
-      if(isDrawing&&!(deviceId in alpha0)){
-        alpha0[deviceId]=alpha;
-        beta0 [deviceId]=beta;
-      }
-      if(!(deviceId in alpha0))return;
-
-      let dA=alpha-alpha0[deviceId];
-      if(dA>180)dA-=360;
-      if(dA<-180)dA+=360;
-      let dB=beta-beta0[deviceId];
-
-      dA=Math.max(-MAX_H,Math.min(MAX_H,dA));
-      dB=Math.max(-MAX_V,Math.min(MAX_V,dB));
-
-      const rawX=CX-(dA/MAX_H)*CX,
-            rawY=CY-(dB/MAX_V)*CY;
-      lastRaw[deviceId]={x:rawX,y:rawY};
-
-      if(!(deviceId in lastSm)) lastSm[deviceId]={x:CX,y:CY};
-      const s=lastSm[deviceId];
-      s.x+=(rawX-s.x)*SMOOTH;
-      s.y+=(rawY-s.y)*SMOOTH;
-
-      if(isDrawing){
-        stamp(brush, s.x, s.y, s.x+(rawX-s.x), s.y+(rawY-s.y), color);
-      }
-    });
-
-    let pulse=0,up=true;
-    (function drawLoop(){
-      pulse += up?0.2:-0.2;
-      if(pulse>2)up=false;
-      if(pulse<0)up=true;
-
-      for(let id in lastSm){
-        const {x,y}=lastSm[id],
-              col=lastCol[id]||"#fff",
-              r=4+pulse;
-        ctx.beginPath(); ctx.arc(x,y,r,0,2*Math.PI);
-        ctx.fillStyle=col; ctx.fill();
-        if(lastLit[id]<20){
-          ctx.beginPath(); ctx.arc(x,y,r+3,0,2*Math.PI);
-          ctx.strokeStyle="#fff"; ctx.lineWidth=3; ctx.stroke();
-        }
-      }
-      requestAnimationFrame(drawLoop);
-    })();
+    render();
   </script>
 </body>
 </html>
