--- a/public/display.html
+++ b/public/display.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>Laserpointer Display v3.13</title>
   <style>
-    body { margin:0; background:black }
-    canvas { display:block; margin:auto; background:black }
+    body { margin:0; background:black; }
+    canvas { display:block; margin:auto; background:black; }
     #version {
-      position:absolute; top:8px; left:8px;
-      color:#fff; font-family:sans-serif; font-size:14px; opacity:0.6;
+      position:absolute; top:10px; left:10px;
+      color:white; font-family:sans-serif; font-size:14px; opacity:0.6;
     }
   </style>
 </head>
@@ -21,120 +21,160 @@
     const socket = io();
     socket.emit("identify", { role: "display", deviceId: null });
 
-    const c   = document.getElementById("canvas"),
-          ctx = c.getContext("2d"),
-          CX  = c.width/2,
-          CY  = c.height/2;
+    const c    = document.getElementById("canvas"),
+          ctx  = c.getContext("2d"),
+          CX   = c.width/2,
+          CY   = c.height/2;
 
-    // Admin-Settings (falls genutzt)
-    let MAX_H = 20, MAX_V = 20, SMOOTH = 0.15;
+    // Defaults (kann Admin überschreiben)
+    let MAX_H   = 20,
+        MAX_V   = 20,
+        SMOOTH  = 0.15;
+
+    // State pro Gerät
+    const alpha0Map  = {},
+          beta0Map   = {},
+          rawPos     = {},
+          smoothPos  = {},
+          lastColor  = {},
+          lastLight  = {},
+          lastTime   = {},
+          lastSpeed  = {},
+          segments   = [];
+
+    ctx.lineCap  = "round";
+    ctx.lineJoin = "round";
+
+    // Admin-Einstellungen live
     socket.on("updateSettings", ({ maxH, maxV, smooth }) => {
       if (typeof maxH   === "number") MAX_H  = maxH;
       if (typeof maxV   === "number") MAX_V  = maxV;
       if (typeof smooth === "number") SMOOTH = smooth;
     });
 
-    // State pro Gerät
-    const alpha0    = {},  // Kalibrier-Null α
-          beta0     = {},  // Kalibrier-Null β
-          lastSm    = {},  // letzte geglättete Position
-          lastTime  = {},  // letzter Timestamp
-          lastCol   = {},  // Farbe
-          lastLit   = {};  // Lightness %
-
-    ctx.lineCap  = "round";
-    ctx.lineJoin = "round";
-
-    // Canvas clear
-    socket.on("clear", () => {
-      ctx.clearRect(0, 0, c.width, c.height);
-      for (let k in alpha0)   delete alpha0[k];
-      for (let k in beta0)    delete beta0[k];
-      for (let k in lastSm)   delete lastSm[k];
-      for (let k in lastTime) delete lastTime[k];
-      for (let k in lastCol)  delete lastCol[k];
-      for (let k in lastLit)  delete lastLit[k];
-    });
-
+    // Hilfs: Lightness parsen
     function parseLight(hsl) {
-      const m = hsl.match(/hsl\(\s*\d+,\s*\d+%,\s*(\d+)%\s*\)/);
+      const m = hsl.match(/hsl\(\s*\d+,\s*\d+%,\s*(\d+)%\)/);
       return m ? +m[1] : 50;
     }
 
-    socket.on("motion", ({ alpha, beta, color, isDrawing, brush, deviceId }) => {
-      if (!deviceId || typeof alpha !== "number") return;
+    socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
+      if (!deviceId || typeof alpha !== "number" || typeof beta !== "number")
+        return;
+
       const now = performance.now();
 
-      // Farbe & Light
-      lastCol[deviceId] = color;
-      lastLit[deviceId] = parseLight(color);
+      // Farbe & Lightness merken
+      lastColor[deviceId] = color;
+      lastLight[deviceId] = parseLight(color);
 
       // Kalibrierung beim ersten Zeichnen
-      if (isDrawing && !(deviceId in alpha0)) {
-        alpha0[deviceId] = alpha;
-        beta0 [deviceId] = beta;
+      if (isDrawing && !(deviceId in alpha0Map)) {
+        alpha0Map[deviceId] = alpha;
+        beta0Map [deviceId] = beta;
+        rawPos    [deviceId] = { x: CX, y: CY };
+        smoothPos [deviceId] = { x: CX, y: CY };
+        lastTime  [deviceId] = now;
+        lastSpeed [deviceId] = 0;
       }
-      if (!(deviceId in alpha0)) return;
+      if (!(deviceId in alpha0Map)) return;
 
       // Winkel-Delta + Wrap
-      let dA = alpha - alpha0[deviceId];
-      if (dA > 180) dA -= 360;
+      let dA = alpha - alpha0Map[deviceId];
+      if (dA > 180)  dA -= 360;
       if (dA < -180) dA += 360;
-      let dB = beta - beta0[deviceId];
+      let dB = beta - beta0Map[deviceId];
 
       // Clamp
       dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
       dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
 
-      // Map auf Canvas raw
-      const rawX = CX - (dA/MAX_H)*CX;
-      const rawY = CY - (dB/MAX_V)*CY;
+      // Map auf Canvas (invertiert)
+      const x = CX - (dA / MAX_H) * CX;
+      const y = CY - (dB / MAX_V) * CY;
 
-      // Init smoothing / time
-      if (!(deviceId in lastSm)) {
-        lastSm[deviceId]   = { x: CX, y: CY };
-        lastTime[deviceId] = now;
-      }
-      const s = lastSm[deviceId];
-      // smoothing
-      s.x += (rawX - s.x) * SMOOTH;
-      s.y += (rawY - s.y) * SMOOTH;
-
-      // Geschwindigkeit (px/ms)
-      const dt = now - lastTime[deviceId] || 16;
-      const dx = s.x - (lastSm[deviceId].x || s.x);
-      const dy = s.y - (lastSm[deviceId].y || s.y);
+      // Berechne Geschwindigkeit (px/ms) seit letztem Event
+      const prevRaw = rawPos[deviceId];
+      const dx = x - prevRaw.x, dy = y - prevRaw.y;
+      const dt = Math.max(1, now - lastTime[deviceId]);
       const speed = Math.hypot(dx, dy) / dt;
+      lastSpeed[deviceId] = speed;
 
-      // Map Speed → thickness [max 12px at speed→0, min 2px at fast]
-      const maxW = 12, minW = 2;
-      // z.B. cutoff speed 0→0px, 0.5px/ms→full dynamic
-      const norm = Math.min(1, speed / 0.5);
-      const w = maxW - (maxW - minW) * norm;
-      const r = w/2; // radius
+      // Speichere Rohdaten
+      rawPos[deviceId]  = { x, y };
+      lastTime[deviceId] = now;
 
-      // Zeichnen nur bei isDrawing
+      // Segment speichern, falls gezeichnet wird
       if (isDrawing) {
-        ctx.strokeStyle = color;
-        ctx.fillStyle   = color;
-        ctx.lineWidth   = w;
+        // Map Geschwindigkeit → Strichbreite [2px–12px]
+        const minW = 2, maxW = 12;
+        const norm = Math.min(1, speed / 0.5); // 0.5 px/ms → voll dünn
+        const w = maxW - (maxW - minW) * norm;
+        segments.push({ x1: prevRaw.x, y1: prevRaw.y, x2: x, y2: y, color, width: w });
+      }
+    });
 
-        // Mittellinie
+    // Canvas löschen
+    socket.on("clear", () => {
+      segments.length = 0;
+      ctx.clearRect(0, 0, c.width, c.height);
+      for (let k in alpha0Map)  delete alpha0Map[k];
+      for (let k in beta0Map)   delete beta0Map[k];
+      for (let k in rawPos)     delete rawPos[k];
+      for (let k in smoothPos)  delete smoothPos[k];
+      for (let k in lastColor)  delete lastColor[k];
+      for (let k in lastLight)  delete lastLight[k];
+      for (let k in lastTime)   delete lastTime[k];
+      for (let k in lastSpeed)  delete lastSpeed[k];
+    });
+
+    // Render-Loop
+    let pulse = 0, growing = true;
+    function render() {
+      ctx.clearRect(0, 0, c.width, c.height);
+
+      // 1) alle Segmente zeichnen
+      for (const s of segments) {
+        ctx.strokeStyle = s.color;
+        ctx.lineWidth   = s.width;
         ctx.beginPath();
-        ctx.moveTo(s.x, s.y);
-        ctx.lineTo(rawX, rawY);
+        ctx.moveTo(s.x1, s.y1);
+        ctx.lineTo(s.x2, s.y2);
         ctx.stroke();
-
-        // Punkt am Ende
-        ctx.beginPath();
-        ctx.arc(rawX, rawY, r, 0, 2*Math.PI);
-        ctx.fill();
       }
 
-      // Update
-      lastSm[deviceId]   = { x: rawX, y: rawY };
-      lastTime[deviceId] = now;
-    });
+      // 2) Pulsierende Punkte (dynamische Größe)
+      pulse += growing ? 0.2 : -0.2;
+      if (pulse > 2)  growing = false;
+      if (pulse < 0)  growing = true;
+
+      for (const id in rawPos) {
+        const { x, y } = rawPos[id];
+        const col      = lastColor[id] || "#f00";
+        const baseW    = (Math.max(2, Math.min(12, 
+                          12 - (12 - 2) * Math.min(1, lastSpeed[id]/0.5)
+                        ))) / 2;
+        const r = baseW + pulse;
+
+        // Hauptpunkt
+        ctx.beginPath();
+        ctx.arc(x, y, r, 0, 2 * Math.PI);
+        ctx.fillStyle = col;
+        ctx.fill();
+
+        // Weißer Ring bei Low-Light
+        if ((lastLight[id]||50) < 20) {
+          ctx.beginPath();
+          ctx.arc(x, y, r + 3, 0, 2 * Math.PI);
+          ctx.strokeStyle = "#fff";
+          ctx.lineWidth   = 3;
+          ctx.stroke();
+        }
+      }
+
+      requestAnimationFrame(render);
+    }
+    render();
   </script>
 </body>
 </html>
