--- a/public/display.html
+++ b/public/display.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>Laserpointer Display v3.13</title>
+  <title>Laserpointer Display v3.14</title>
   <style>
     body { margin:0; background:black; }
     canvas { display:block; margin:auto; background:black; }
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-  <div id="version">v3.13 (dynamic thickness)</div>
+  <div id="version">v3.14 (smooth dynamic)</div>
   <canvas id="canvas" width="1024" height="1024"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script>
@@ -26,114 +26,104 @@
           CX   = c.width/2,
           CY   = c.height/2;
 
-    // Defaults (kann Admin überschreiben)
+    // Admin-overrides
     let MAX_H   = 20,
         MAX_V   = 20,
         SMOOTH  = 0.15;
 
-    // State pro Gerät
-    const alpha0Map  = {},
-          beta0Map   = {},
-          rawPos     = {},
-          smoothPos  = {},
-          lastColor  = {},
-          lastLight  = {},
-          lastTime   = {},
-          lastSpeed  = {},
-          segments   = [];
-
-    ctx.lineCap  = "round";
-    ctx.lineJoin = "round";
-
-    // Admin-Einstellungen live
     socket.on("updateSettings", ({ maxH, maxV, smooth }) => {
       if (typeof maxH   === "number") MAX_H  = maxH;
       if (typeof maxV   === "number") MAX_V  = maxV;
       if (typeof smooth === "number") SMOOTH = smooth;
     });
 
-    // Hilfs: Lightness parsen
+    // State per device
+    const alpha0    = {},
+          beta0     = {},
+          rawPos    = {},
+          lastTime  = {},
+          segments  = [],
+          lastCol   = {},
+          lastLight = {};
+
+    ctx.lineCap  = "round";
+    ctx.lineJoin = "round";
+
     function parseLight(hsl) {
-      const m = hsl.match(/hsl\(\s*\d+,\s*\d+%,\s*(\d+)%\)/);
+      const m = hsl.match(/hsl\(\s*\d+,\s*\d+%,\s*(\d+)%\s*\)/);
       return m ? +m[1] : 50;
     }
 
-    socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
-      if (!deviceId || typeof alpha !== "number" || typeof beta !== "number")
-        return;
+    socket.on("clear", () => {
+      segments.length = 0;
+      ctx.clearRect(0,0,c.width,c.height);
+      Object.keys(alpha0).forEach(k=>delete alpha0[k]);
+      Object.keys(beta0).forEach(k=>delete beta0[k]);
+      Object.keys(rawPos).forEach(k=>delete rawPos[k]);
+      Object.keys(lastTime).forEach(k=>delete lastTime[k]);
+      Object.keys(lastCol).forEach(k=>delete lastCol[k]);
+      Object.keys(lastLight).forEach(k=>delete lastLight[k]);
+    });
 
+    socket.on("motion", ({ alpha, beta, color, isDrawing, deviceId }) => {
+      if (!deviceId || typeof alpha !== "number") return;
       const now = performance.now();
 
-      // Farbe & Lightness merken
-      lastColor[deviceId] = color;
+      // Farbe & Helligkeit
+      lastCol[deviceId]   = color;
       lastLight[deviceId] = parseLight(color);
 
-      // Kalibrierung beim ersten Zeichnen
-      if (isDrawing && !(deviceId in alpha0Map)) {
-        alpha0Map[deviceId] = alpha;
-        beta0Map [deviceId] = beta;
-        rawPos    [deviceId] = { x: CX, y: CY };
-        smoothPos [deviceId] = { x: CX, y: CY };
-        lastTime  [deviceId] = now;
-        lastSpeed [deviceId] = 0;
+      // Kalibrierung
+      if (isDrawing && !(deviceId in alpha0)) {
+        alpha0[deviceId] = alpha;
+        beta0 [deviceId] = beta;
+        rawPos[deviceId] = { x: CX, y: CY };
+        lastTime[deviceId] = now;
+        return;
       }
-      if (!(deviceId in alpha0Map)) return;
+      if (!(deviceId in alpha0)) return;
 
-      // Winkel-Delta + Wrap
-      let dA = alpha - alpha0Map[deviceId];
-      if (dA > 180)  dA -= 360;
-      if (dA < -180) dA += 360;
-      let dB = beta - beta0Map[deviceId];
+      // Winkel delta + wrap
+      let dA = alpha - alpha0[deviceId];
+      if (dA>180)  dA-=360;
+      if (dA<-180) dA+=360;
+      let dB = beta - beta0[deviceId];
 
-      // Clamp
+      // clamp
       dA = Math.max(-MAX_H, Math.min(MAX_H, dA));
       dB = Math.max(-MAX_V, Math.min(MAX_V, dB));
 
-      // Map auf Canvas (invertiert)
-      const x = CX - (dA / MAX_H) * CX;
-      const y = CY - (dB / MAX_V) * CY;
+      // map to canvas
+      const x = CX - (dA/MAX_H)*CX;
+      const y = CY - (dB/MAX_V)*CY;
 
-      // Berechne Geschwindigkeit (px/ms) seit letztem Event
-      const prevRaw = rawPos[deviceId];
-      const dx = x - prevRaw.x, dy = y - prevRaw.y;
-      const dt = Math.max(1, now - lastTime[deviceId]);
-      const speed = Math.hypot(dx, dy) / dt;
-      lastSpeed[deviceId] = speed;
+      // speed calculation (px/sec)
+      const prev = rawPos[deviceId];
+      const dx   = x - prev.x;
+      const dy   = y - prev.y;
+      const dt   = (now - lastTime[deviceId]) / 1000; // in Sekunden
+      const speed = dt>0 ? Math.hypot(dx,dy)/dt : 0;
 
-      // Speichere Rohdaten
+      // speichern für next
       rawPos[deviceId]  = { x, y };
       lastTime[deviceId] = now;
 
-      // Segment speichern, falls gezeichnet wird
       if (isDrawing) {
-        // Map Geschwindigkeit → Strichbreite [2px–12px]
-        const minW = 2, maxW = 12;
-        const norm = Math.min(1, speed / 0.5); // 0.5 px/ms → voll dünn
-        const w = maxW - (maxW - minW) * norm;
-        segments.push({ x1: prevRaw.x, y1: prevRaw.y, x2: x, y2: y, color, width: w });
+        // Geschwindigkeit → norm [0..1] (0: langsam, 2000px/s oder mehr → schnell)
+        const threshold = 2000; 
+        const norm = Math.min(1, speed/threshold);
+        const maxW = 12, minW = 2;
+        const w = maxW - (maxW-minW)*norm;
+
+        segments.push({ x1: prev.x, y1: prev.y, x2: x, y2: y, color, width: w });
       }
     });
 
-    // Canvas löschen
-    socket.on("clear", () => {
-      segments.length = 0;
-      ctx.clearRect(0, 0, c.width, c.height);
-      for (let k in alpha0Map)  delete alpha0Map[k];
-      for (let k in beta0Map)   delete beta0Map[k];
-      for (let k in rawPos)     delete rawPos[k];
-      for (let k in smoothPos)  delete smoothPos[k];
-      for (let k in lastColor)  delete lastColor[k];
-      for (let k in lastLight)  delete lastLight[k];
-      for (let k in lastTime)   delete lastTime[k];
-      for (let k in lastSpeed)  delete lastSpeed[k];
-    });
-
-    // Render-Loop
-    let pulse = 0, growing = true;
+    let pulse=0, growing=true;
     function render() {
-      ctx.clearRect(0, 0, c.width, c.height);
+      ctx.clearRect(0,0,c.width,c.height);
 
-      // 1) alle Segmente zeichnen
+      // draw all segments
       for (const s of segments) {
         ctx.strokeStyle = s.color;
         ctx.lineWidth   = s.width;
@@ -143,29 +133,26 @@
         ctx.stroke();
       }
 
-      // 2) Pulsierende Punkte (dynamische Größe)
-      pulse += growing ? 0.2 : -0.2;
-      if (pulse > 2)  growing = false;
-      if (pulse < 0)  growing = true;
+      // pulsating dots
+      pulse += growing?0.2:-0.2;
+      if (pulse>2) growing=false;
+      if (pulse<0) growing=true;
 
       for (const id in rawPos) {
-        const { x, y } = rawPos[id];
-        const col      = lastColor[id] || "#f00";
-        const baseW    = (Math.max(2, Math.min(12, 
-                          12 - (12 - 2) * Math.min(1, lastSpeed[id]/0.5)
-                        ))) / 2;
-        const r = baseW + pulse;
+        const { x,y } = rawPos[id];
+        const col     = lastCol[id] || "#fff";
+        // derive current w based on last segment widths? fallback:
+        const wLast = segments.filter(s=>s.color===col).slice(-1)[0]?.width || 6;
+        const r = wLast/2 + pulse;
 
-        // Hauptpunkt
         ctx.beginPath();
-        ctx.arc(x, y, r, 0, 2 * Math.PI);
+        ctx.arc(x,y,r,0,2*Math.PI);
         ctx.fillStyle = col;
         ctx.fill();
 
-        // Weißer Ring bei Low-Light
         if ((lastLight[id]||50) < 20) {
           ctx.beginPath();
-          ctx.arc(x, y, r + 3, 0, 2 * Math.PI);
+          ctx.arc(x,y,r+3,0,2*Math.PI);
           ctx.strokeStyle = "#fff";
           ctx.lineWidth   = 3;
           ctx.stroke();
